<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConsult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="afpa.dl101_filrouge_android.vues.AjouterEvenement"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/titre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTitre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/entrezTitre"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Titre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tv_Titre"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_DateDebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_dateDebut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitre" />

    <TextView
        android:id="@+id/dateDebutDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="3dp"
        android:text="@string/dateDisplay"
        android:textAppearance="@style/TextContactContactName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_DateDebut"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@+id/tv_DateDebut"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_DateFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_dateFin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_DateDebut" />

    <TextView
        android:id="@+id/dateFinDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/dateDisplay"
        android:textAppearance="@style/TextContactContactName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_DateFin"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/tv_DateFin"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_Empl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFinDisplay" />

    <TextView
        android:id="@+id/editEmpl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/entrezLocation"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Empl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Empl" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_Description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Empl" />

    <TextView
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/entrezDescription"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvDescription"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_EditEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_EditEvent"
        app:layout_constraintLeft_toRightOf="@+id/btn_DelEvent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <Button
        android:id="@+id/btn_DelEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_DelEvent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_EditEvent"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

</android.support.constraint.ConstraintLayout>
